--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,86 @@
-.App {
+.header {
+  height: 200px;
+  width: 100%;
+  background-color: #e9eef6;
+  padding-top: 50px;
+}
+
+.card-container {
+  height: 300px;
+  width: 300px;
+  box-shadow: 0px 3px 40px #a5a5a5;
+}
+
+.card-wrapper {
+  width: 285px;
+  height: 305px;
+  box-shadow: 0px 3px 40px #a5a5a5;
+  display: flex;
+  flex-direction: column;
+}
+
+.card-top {
+  width: 100%;
+  height: 2%;
+}
+
+.task-holder {
+  width: 100%;
+  height: 98%;
+  padding: 10px 10px;
+  display: flex;
+  flex-direction: column;
+  position: relative;
+}
+
+.card-header {
+  margin-top: 10px;
+  margin-bottom: 10px;
+  max-width: 80px;
+  height: 30px;
+  padding: 1px 1px !important;
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.task-container {
+  height: 600px;
+  width: 100%;
   display: flex;
-  flex-direction: column;
+  flex-wrap: wrap;
+  gap: 30px;
+  /* background-color: #f6f7f8; */
+  padding: 40px 100px;
+  margin-bottom: 200px;
+}
+.iconsStyle {
+  margin-right: 13px;
+}
+.list-view .card-wrapper {
+  display: flex;
+  flex-direction: row;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+  padding: 10px;
+  margin-bottom: 10px;
+}
+
+.list-view .card-holder {
+  display: flex;
+  flex: 1;
+  align-items: center;
+}
+.viewBtn {
+  padding: 1px 30px;
+  background-color: darkmagenta;
+  border: none;
+  outline: none;
   color: white;
+  margin-right: 5px;
 }
-
-.App-link {
-  color: #61dafb;
+.taskText {
+  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
+  font-size: 35px;
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.noviewText {
+  margin: 0 auto;
+  font-size: 25px;
 }
